fixed alignment

--- a/_sass/4-layouts/home-page.scss
+++ b/_sass/4-layouts/home-page.scss
@@ -46,6 +46,10 @@
 
 .article__content {
   margin-top: 20px;
+}
+
+.article__content_gallery {
+  margin-top: 20px;
   padding-left: 30px;
 }
 
